@@ -1,3 +1,8 @@
+2003-10-23  Werner Koch  <wk@gnupg.org>
+
+	* secmem.c (lock_pool): Don't print the warning for certain
+	systems, handle ENOMEM.
+
 2003-10-21  Werner Koch  <wk@gnupg.org>
 
 	* secmem.c (_gcry_secmem_dump_stats): Fixed format sepcifier for a
